--- a/src/style/chat/chat.css
+++ b/src/style/chat/chat.css
@@ -1,6 +1,6 @@
 .chatList {
   width: 1000px;
-  height: 700px;
+  height: 750px;
   border: 1px solid #ccc;
   margin: 0 auto;
   text-align: none;
@@ -36,13 +36,14 @@
   font-weight: 600;
 }
 .chatList .chatList_left .chatList_inner {
-  overflow-y: scroll;
   height: 640px;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList {
+  overflow-y: scroll;
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList li {
   clear: both;
