--- a/src/style/chat/chat.scss
+++ b/src/style/chat/chat.scss
@@ -1,6 +1,6 @@
 .chatList {
   width: 1000px;
-  height: 700px;
+  height: 750px;
   border: 1px solid #ccc;
   margin: 0 auto;
   text-align: none;
@@ -11,9 +11,7 @@
   }
   
   .chatList_left {
-    
     height: 100%;
-
     .chatList_header {
       padding: 20px 0;
       position: relative;
@@ -39,13 +37,14 @@
     }
 
     .chatList_inner {
-      overflow-y: scroll;
       height: 640px;
-     
+      
       .chatList_inner_roomList {
+        overflow-y: scroll;
         margin: 0;
         padding: 0;
         width: 100%;
+        height: 100%;
         li {
           clear: both;
           list-style: none;
