--- a/src/style/detailItem/detailItem.scss
+++ b/src/style/detailItem/detailItem.scss
@@ -1,3 +1,53 @@
+.btnStyle {
+  width: 100%;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  color: rgb(255, 255, 255);
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  line-height: 1;
+
+  span {
+    margin: 0 3px;
+    font-weight: 800;
+  }
+}
+
+.btnWish {
+  background-color: #aaa;
+}
+
+.btnWishActive {
+  background-color: #222;
+}
+
+.btnChat {
+  background-color: orange;
+}
+
+.btnOrder {
+  background-color: red;
+}
+
+.btnIcon {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+
+
+  &>div {
+    position: relative;
+    width: 32.3333%;
+  }
+
+
+}
+
 .detailItem {
   margin-top: 30px;
   display: flex;
@@ -224,54 +274,7 @@
       }
     }
 
-    .btnIcon {
-      display: flex;
-      -webkit-box-pack: justify;
-      justify-content: space-between;
 
-      &>* {
-        width: 31%;
-        text-align: center;
-      }
-
-      &>div {
-        position: relative;
-
-        button {
-          width: 100%;
-          height: 100%;
-          padding: 20px;
-          color: rgb(255, 255, 255);
-          display: flex;
-          -webkit-box-align: center;
-          align-items: center;
-          -webkit-box-pack: center;
-          justify-content: center;
-          line-height: 1;
-
-          span {
-            margin: 0 3px;
-            font-weight: 800;
-          }
-        }
-      }
-
-      .btnWish {
-        background-color: #aaa;
-      }
-
-      .btnWishActive {
-        background-color: #222;
-      }
-
-      .btnChat {
-        background-color: orange;
-      }
-
-      .btnOrder {
-        background-color: red;
-      }
-    }
 
   }
 }
@@ -512,62 +515,62 @@
       padding: 24px;
       border: 1px solid rgb(238, 238, 238);
       margin-bottom: 16px;
-
+      box-sizing: border-box;
       li {
         width: 50%;
         display: flex;
         justify-content: space-between;
- 
-          height: 128px;
 
-          .detailItemImg {
-            display: block;
-            width: 35%;
+        height: 128px;
+
+        .detailItemImg {
+          display: block;
+          width: 35%;
+          height: 100%;
+
+          img {
             height: 100%;
+            width: 100%;
+            object-fit: cover;
+          }
+        }
 
-            img {
-              height: 100%;
-              width: 100%;
-              object-fit: cover;
-            }
+        &>div {
+          display: flex;
+          flex-direction: column;
+          -webkit-box-pack: center;
+          justify-content: center;
+          width: calc(100% - 110px);
+          padding-left: 12px;
+          box-sizing: border-box;
+
+          .similarProductPrice {
+            color: rgb(33, 33, 33);
+            font-size: 15px;
+            font-weight: 700;
+            margin-bottom: 6px;
           }
 
-          &>div {
-            display: flex;
-            flex-direction: column;
-            -webkit-box-pack: center;
-            justify-content: center;
-            width: calc(100% - 110px);
-            padding-left: 12px;
-            box-sizing: border-box;
-
-            .similarProductPrice {
-              color: rgb(33, 33, 33);
-              font-size: 15px;
-              font-weight: 700;
-              margin-bottom: 6px;
-            }
-
-            p:nth-child(2) {
-              font-size: 14px;
-              line-height: 18px;
-              max-height: 36px;
-              color: rgb(113, 112, 126);
-              margin-bottom: 16px;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              word-break: break-all;
-              display: -webkit-box;
-              -webkit-line-clamp: 2;
-              -webkit-box-orient: vertical;
-            }
-
-            span {
-              font-size: 12px;
-              color: rgb(178, 178, 178);
-              display: block;
-            }
+          p:nth-child(2) {
+            font-size: 14px;
+            line-height: 18px;
+            max-height: 36px;
+            color: rgb(113, 112, 126);
+            margin-bottom: 16px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            word-break: break-all;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
           }
+
+          span {
+            font-size: 12px;
+            color: rgb(178, 178, 178);
+            display: block;
+          }
+        }
       }
     }
 
@@ -577,6 +580,163 @@
     flex: 1;
     padding: 0 30px;
 
+    .userInfo {
+      display: flex;
+      margin-top: 20px;
+      margin-bottom: 16px;
+
+      .profileImg {
+        margin-right: 16px;
+
+        img {
+          border-radius: 50%;
+          width: 48px;
+          height: 48px;
+          object-fit: cover;
+        }
+      }
+
+      .storeName {
+        a {
+          display: block;
+
+          p {
+            display: block;
+            margin: 4px 0px 4px;
+            color: rgb(33, 33, 33);
+            font-size: 15px;
+          }
+
+          ul {
+            display: flex;
+
+            li {
+              font-size: 12px;
+              color: rgb(153, 153, 153);
+
+              &:first-child {
+                margin-right: 17px;
+                position: relative;
+
+                &::after {
+                  content: "";
+                  position: absolute;
+                  top: 4px;
+                  right: -8px;
+                  width: 1px;
+                  height: 12px;
+                  border-right: 1px solid rgb(204, 204, 204);
+                }
+              }
+            }
+          }
+        }
+
+
+      }
+    }
+
+    .detailPageFollow {
+      width: 100%;
+      height: 32px;
+      border: 1px solid rgb(238, 238, 238);
+      color: rgb(136, 136, 136);
+      display: flex;
+      -webkit-box-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      align-items: center;
+      font-size: 13px;
+      border-radius: 2px;
+
+      svg {
+        margin-right: 3px;
+      }
+    }
+
+    .photoList {
+      margin-top: 16px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 3px;
+
+      li {
+        width: calc(49% - 3px);
+        margin: 0 0.5%;
+        box-sizing: border-box;
+
+        a {
+          width: 100%;
+          display: block;
+          position: relative;
+
+          img {
+            width: 100%;
+            height: 100px;
+            object-fit: cover;
+          }
+
+          p {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            width: 100%;
+            height: 27px;
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+            -webkit-box-pack: center;
+            justify-content: center;
+            color: rgb(255, 255, 255);
+            font-size: 12px;
+            background: rgba(0, 0, 0, 0.25);
+
+            span {
+              font-weight: 600;
+              margin-right: 3px;
+            }
+          }
+        }
+      }
+
+    }
+
+    .showMoreSeller {
+      height: 40px;
+      display: flex;
+      -webkit-box-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      justify-content: center;
+      border-bottom: 1px solid rgb(238, 238, 238);
+
+      a {
+        font-size: 13px;
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        color: rgb(102, 102, 102);
+
+        span {
+          color: rgb(247, 47, 51);
+          margin-right: 3px;
+        }
+
+        svg {
+          margin: 3px 0 0 3px;
+        }
+      }
+    }
+
+    .btnIcon {
+      padding: 16px 0;
+      &>div{
+        width: 49%;
+        span{
+          font-size: 14px;
+        }
+      }
+    }
   }
 
 }
